# androxus

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  prelude.rs
src/code/: bottom_tabbar.rs  mod.rs  topbar.rs
src/components/: bottom_tabbar.rs  mod.rs  topbar.rs
src/components/icons/: app_icons.rs  mod.rs
src/icons/: icons.rs
src/styles/: bottom_tabbar.css  topbar.css
