[package]
name = "androxus"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A UI component library for Android with Dioxus"
repository = "https://github.com/cbdefontenay/androxus"
readme = "README.md"
keywords = ["Dioxus", "Android", "UI", "component"]

[dependencies]
dioxus = { version = "0.8.0-alpha.0", features = ["router"] }

[features]
default = ["mobile"]
mobile = ["dioxus/mobile"]